docs/7.57/md/abennews-756-abap_cds.md
  

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-75.htm) →  [News for Release 7.56](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-756.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: ABAP CDS in Release 7.56, ABENNEWS-756-ABAP_CDS, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D
%0A%0D%0ASuggestion for improvement:)

ABAP CDS in Release 7.56

[1\. CDS Abstract Entity Extensions](#!ABAP_MODIFICATION_1@1@)
[2\. CDS Abstract Entity, To-Parent Association](#!ABAP_MODIFICATION_2@2@)
[3\. CDS Hierarchy, Caching Policy](#!ABAP_MODIFICATION_3@3@)
[4\. Using CDS-Managed DDIC Views is Obsolete](#!ABAP_MODIFICATION_4@4@)
[5\. CDS View Entity, Reusing Expressions](#!ABAP_MODIFICATION_5@5@)
[6\. CDS View Entity, UNION Clause](#!ABAP_MODIFICATION_6@6@)
[7\. CDS View Entity, DISTINCT](#!ABAP_MODIFICATION_7@7@)
[8\. CDS View Entity, New Set Operators](#!ABAP_MODIFICATION_8@8@)
[9\. CDS View Entity, New Conversion Functions](#!ABAP_MODIFICATION_9@9@)
[10\. CDS View Entity, Typed Literals](#!ABAP_MODIFICATION_10@10@)
[11\. CDS View Entity, Handling of Amounts and Quantities](#!ABAP_MODIFICATION_11@11@)
[12\. CDS View Entity, Extended Expression Matrix](#!ABAP_MODIFICATION_12@12@)
[13\. CDS Projection View, REDEFINE ASSOCIATION](#!ABAP_MODIFICATION_13@13@)
[14\. CDS Projection View, PROVIDER CONTRACT](#!ABAP_MODIFICATION_14@14@)
[15\. ABAP Program for Migration Analysis](#!ABAP_MODIFICATION_15@15@)
[16\. Migration Tool for CDS Views](#!ABAP_MODIFICATION_16@16@)
[17\. New Reference Type for Annotations](#!ABAP_MODIFICATION_17@17@)
[18\. New AbapCatalog Annotations](#!ABAP_MODIFICATION_18@18@)
[19\. New CDS System Entities to Generate Series](#!ABAP_MODIFICATION_19@19@)

Modification 1   

CDS Abstract Entity Extensions

The new statement [EXTEND ABSTRACT ENTITY](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_extend_abstract_entity.htm) of the DDL of ABAP CDS makes it possible to add new elements to existing [CDS abstract entities](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_abstract_entity_glosry.htm "Glossary Entry") by using [CDS abstract entity extensions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_abs_entity_extend_glosry.htm "Glossary Entry").

Modification 2   

CDS Abstract Entity, To-Parent Association

In [CDS abstract entities](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_abstract_entity_glosry.htm "Glossary Entry"), it is now possible to define [to-parent associations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abento_parent_association_glosry.htm "Glossary Entry") without ON condition. The ON condition can be left out if the association target is also a CDS abstract entity.

Modification 3   

CDS Hierarchy, Caching Policy

A hierarchy definition [DEFINE HIERARCHY](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_f1_define_hierarchy.htm) can now use the new addition CACHE ON*|*OFF*|*FORCE to specify the caching policy for a generated hierarchy.

Modification 4   

Using CDS-Managed DDIC Views is Obsolete

For each [CDS DDIC-based view (obsolete)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_v1_view_glosry.htm "Glossary Entry"), a [CDS-managed DDIC view (obsolete)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_mngdddic_view_glosry.htm "Glossary Entry") is created in ABAP Dictionary upon activation. Using this [CDS-managed DDIC view (obsolete)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_mngdddic_view_glosry.htm "Glossary Entry"), for example for typing or for accessing the CDS entity in question, is [obsolete](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_access_obsolete.htm) from now on. The reason is the release of a new type of CDS entity, the [CDS view entity](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_v2_view_glosry.htm "Glossary Entry"), which will replace [CDS DDIC-based views (obsolete)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_v1_view_glosry.htm "Glossary Entry") in the future. CDS view entities do not have a [CDS-managed DDIC view (obsolete)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_mngdddic_view_glosry.htm "Glossary Entry") attached and in case of a migration from CDS DDIC-based view (obsolete) to CDS view entity, each usage of a [CDS-managed DDIC view (obsolete)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_mngdddic_view_glosry.htm "Glossary Entry") leads to a syntax error.

Modification 5   

CDS View Entity, Reusing Expressions

In [CDS view entities](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_v2_view_glosry.htm "Glossary Entry"), it is now possible to reuse expressions defined in the SELECT list in other operand positions of the same CDS view entity by using the syntax [$projection.reuse\_exp](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_reusable_expression_v2.htm).

Modification 6   

CDS View Entity, UNION Clause

[UNION](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_union_v2.htm) clauses are now supported in [CDS view entities](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_v2_view_glosry.htm "Glossary Entry"). There are a few differences to UNION clauses in [CDS DDIC-based views](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_v1_view_glosry.htm "Glossary Entry"). The most important difference is that branches of union clauses can be nested within each other in CDS view entities.

Modification 7   

CDS View Entity, DISTINCT

The addition [DISTINCT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_select_statement_v2.htm) is now available for SELECT statements in [CDS view entities](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_v2_view_glosry.htm "Glossary Entry").

Modification 8   

CDS View Entity, New Set Operators

In [CDS view entities](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_v2_view_glosry.htm "Glossary Entry"), two new [set operators](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_set_operators_glosry.htm "Glossary Entry") are available:

-   [EXCEPT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_except_v2.htm)
-   [INTERSECT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_intersect_v2.htm)

Modification 9   

CDS View Entity, New Conversion Functions

Two new conversion functions are available in CDS view entities:

-   [GET\_NUMERIC\_VALUE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_conv_func_unit_curr_v2.htm)
-   [CURR\_TO\_DECFLOAT\_AMOUNT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_conv_func_unit_curr_v2.htm)

Modification 10   

CDS View Entity, Typed Literals

[Typed literals](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_typed_literal_v2.htm) are now available for [CDS view entities](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_v2_view_glosry.htm "Glossary Entry"). Typed literals allow an explicit type declaration and they are available for many built-in ABAP Dictionary data types.

Modification 11   

CDS View Entity, Handling of Amounts and Quantities

In [CDS view entities](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_v2_view_glosry.htm "Glossary Entry"), special handling for [CDS amount fields](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_amount_field.htm) and [CDS quantity fields](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_quantity_field.htm) has been implemented. It differs from the handling of amount fields and quantity fields in DDIC, for example, more data types are possible and the currency key/unit key reference is considered in expressions.

Moreover, a new type is available: the [CDS calculated quantity](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_calculated_quantity.htm). A CDS calculated quantity is the result type of a calculation using amount and/or quantity fields.

Modification 12   

CDS View Entity, Extended Expression Matrix

In [CDS view entities](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_v2_view_glosry.htm "Glossary Entry"), the expression matrix has been extended:

-   In the [WHERE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_where_clause_v2.htm) clause, arithmetic expressions and case expressions are supported as operands.
-   In the [HAVING](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_having_clause_v2.htm) clause, arithmetic expressions and case expressions are supported as operands.
-   In a [searched case expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_searched_case_expr_v2.htm), arithmetic expressions and case expressions are supported as operands.

Modification 13   

CDS Projection View, REDEFINE ASSOCIATION

In CDS projection views, it is now possible to redefine the CDS associations from the projected entity in the header part. This is done using the keyword [REDEFINE ASSOCIATION](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_proj_view_redefined_assoc.htm). Redefinition can include a new filter, alias name, and redirection to a new association target, which must also be a CDS projection view, thus moving the complete data model to the projection layer.

Modification 14   

CDS Projection View, PROVIDER CONTRACT

It is now possible to specify a provider contract for [CDS projection views](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_projection_view_glosry.htm "Glossary Entry") using the keyword [PROVIDER CONTRACT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_pv_provider_contract.htm). The provider contract specifies in which scenario a CDS projection view is used, and the scenario in turn determines in which runtime the view is executed and which features are available.

In this release, there is only one provider contract option available: TRANSACTIONAL\_QUERY.

Modification 15   

ABAP Program for Migration Analysis

The following documented ABAP program is now available for evaluating whether a migration from a CDS DDIC-based view (obsolete) to a CDS view entity is possible:

RUTDDLS\_MIGRATION\_CANDIDATES.

Modification 16   

Migration Tool for CDS Views

The following documented ABAP program is now available for migrating CDS DDIC-based views to CDS view entities:

RUTDDLSV2MIGRATION.

Modification 17   

New Reference Type for Annotations

A new [reference type](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_f1_define_annotation_type.htm) for annotations is available:

-   LocalDefinitionRef

Modification 18   

New AbapCatalog Annotations

The following new AbapCatalog.extensibility annotations have been released:

-   [AbapCatalog.extensibility.allowNewdataSources](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_view_entity_anno.htm)
-   [AbapCatalog.extensibility.dataSources](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_view_entity_anno.htm)
-   [AbapCatalog.extensibility.elementSuffix](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_f1_entity_annotations.htm)
-   [AbapCatalog.extensibility.extensible](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_f1_entity_annotations.htm)
-   [AbapCatalog.extensibility.quota.maximumBytes](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_f1_entity_annotations.htm)
-   [AbapCatalog.extensibility.quota.maximumFields](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_f1_entity_annotations.htm)

Modification 19   

New CDS System Entities to Generate Series

The following new [CDS system table functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_series_generators.htm) are available:

-   ... SERIES\_GENERATE\_DATE( step = ... from\_value = ... to\_value = ... ) ...
-   ... SERIES\_GENERATE\_INTEGER( step = ... from\_value = ... to\_value = ... ) ...
-   ... SERIES\_GENERATE\_TIME( step = ... from\_value = ... to\_value = ... ) ...
-   ... SERIES\_GENERATE\_TIMESTAMP( step = ... from\_value = ... to\_value = ... ) ...